src/test/deca/syntax/invalid/synt/class_decl_after_main.deca
/*
    Description : Déclaration d'une classe après le bloc main

    Résultat : erreur syntaxique (deca:8:0)
*/
{
}
class A{}
// @expected_output deca:8:0
